[gd_scene load_steps=23 format=3 uid="uid://c24c8cimdeafp"]

[ext_resource type="Script" uid="uid://c1a8v8h8qim1k" path="res://Ui/Overlays/shop_overlay.gd" id="1_s8vbi"]
[ext_resource type="Theme" uid="uid://bg5aiu47fhsd4" path="res://Ui/Screens/OverlayTheme.tres" id="2_4a6df"]
[ext_resource type="PackedScene" uid="uid://1afeklw6eo37" path="res://Ui/Overlays/shop_item.tscn" id="2_nhpqm"]
[ext_resource type="Texture2D" uid="uid://sr3sgbkunku8" path="res://Upgrade System/Bucket2.png" id="3_4a6df"]
[ext_resource type="Texture2D" uid="uid://biu733rr4c3ae" path="res://Upgrade System/Bucket3.png" id="4_8rdqw"]
[ext_resource type="Texture2D" uid="uid://rjdat6b1k6jl" path="res://Upgrade System/Bucket4.png" id="5_aa7np"]
[ext_resource type="Texture2D" uid="uid://c33x1oshhc2uh" path="res://Upgrade System/Bucket1Band1.png" id="6_xx7pw"]
[ext_resource type="Texture2D" uid="uid://ell6x2ge3fg0" path="res://Upgrade System/Bucket2Band1.png" id="7_1t0iv"]
[ext_resource type="Texture2D" uid="uid://dmvrsgm6oaf6d" path="res://Upgrade System/Bucket3Band1.png" id="8_qjmlo"]
[ext_resource type="Texture2D" uid="uid://byjnbksp5drpi" path="res://Upgrade System/Bucket4Band1.png" id="9_23cfs"]
[ext_resource type="Texture2D" uid="uid://cd46uu8k5t71p" path="res://Upgrade System/Bucket1Band2.png" id="10_qf55h"]
[ext_resource type="Texture2D" uid="uid://y0jl1uy2eqgm" path="res://Upgrade System/Bucket2Band2.png" id="11_vat2h"]
[ext_resource type="Texture2D" uid="uid://yah2julp5nkk" path="res://Upgrade System/Bucket3Band2.png" id="12_82nyk"]
[ext_resource type="Texture2D" uid="uid://cbflpklu86k7g" path="res://Upgrade System/Bucket4Band2.png" id="13_nqla2"]
[ext_resource type="Texture2D" uid="uid://5oy0fpm278el" path="res://Upgrade System/Bucket1Band3.png" id="14_pdosr"]
[ext_resource type="Texture2D" uid="uid://bsq6lf5v4ehw5" path="res://Upgrade System/Bucket2Band3.png" id="15_553fa"]
[ext_resource type="Texture2D" uid="uid://cyqsm6yl2ktfx" path="res://Upgrade System/Bucket3Band3.png" id="16_5qvsg"]
[ext_resource type="Texture2D" uid="uid://c7fwbrc055p54" path="res://Upgrade System/Bucket4Band3.png" id="17_jdrk2"]
[ext_resource type="Theme" uid="uid://dekeeobkykipg" path="res://Themes/Button.tres" id="18_attc0"]
[ext_resource type="Texture2D" uid="uid://djobl30bj4ap5" path="res://Ui/Menux.png" id="19_4actr"]
[ext_resource type="Texture2D" uid="uid://ck012yl80uxni" path="res://Ui/Currency.png" id="20_ub6vb"]
[ext_resource type="PackedScene" uid="uid://clnbyf64hgt3b" path="res://Ui/install_menu_sounds.tscn" id="21_m4dgy"]

[node name="ShopMenu" type="Control"]
process_mode = 2
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s8vbi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -70.0
offset_right = 127.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_4a6df")

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.5
offset_top = -45.5
offset_right = 113.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="BucketSize" parent="Panel/GridContainer" instance=ExtResource("2_nhpqm")]
layout_mode = 2
item_name = "Bucket Size "
base_description = "Increases the size of the bucket."
tier_count = 3
tier_effects = Array[float]([8.0, 12.0, 18.0])
tier_costs = Array[int]([5, 12, 18])
tier_textures = Array[Texture2D]([ExtResource("3_4a6df"), ExtResource("4_8rdqw"), ExtResource("5_aa7np")])

[node name="BucketSpeed" parent="Panel/GridContainer" instance=ExtResource("2_nhpqm")]
layout_mode = 2
theme_override_font_sizes/font_size = 10
item_name = "Bucket Speed "
base_description = "Increases speed by %"
item_type = 1
tier_count = 3
tier_effects = Array[float]([20.0, 50.0, 100.0])
tier_costs = Array[int]([5, 8, 16])

[node name="BucketFilter" parent="Panel/GridContainer" instance=ExtResource("2_nhpqm")]
layout_mode = 2
item_name = "Bucket Filter "
base_description = "Filter chance is %"
item_type = 2
tier_count = 3
tier_effects = Array[float]([15.0, 30.0, 50.0])
tier_costs = Array[int]([5, 10, 15])
tier_textures = Array[Texture2D]([ExtResource("6_xx7pw"), ExtResource("7_1t0iv"), ExtResource("8_qjmlo"), ExtResource("9_23cfs"), ExtResource("10_qf55h"), ExtResource("11_vat2h"), ExtResource("12_82nyk"), ExtResource("13_nqla2"), ExtResource("14_pdosr"), ExtResource("15_553fa"), ExtResource("16_5qvsg"), ExtResource("17_jdrk2")])

[node name="FallSpeedReducer" parent="Panel/GridContainer" instance=ExtResource("2_nhpqm")]
layout_mode = 2
item_name = "Item Speed Reducer "
base_description = "Items fall % slower"
item_type = 3
tier_count = 3
tier_effects = Array[float]([10.0, 15.0, 25.0])
tier_costs = Array[int]([10, 15, 20])

[node name="ItemDescriptionLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 8

[node name="ExitButton" type="Button" parent="Panel"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 0
offset_left = 235.0
offset_top = 8.0
offset_right = 250.0
offset_bottom = 23.0
theme = ExtResource("18_attc0")
icon = ExtResource("19_4actr")
icon_alignment = 1

[node name="CurrencyTexture" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 6.0
offset_top = 9.0
offset_right = 31.0
offset_bottom = 31.0
texture = ExtResource("20_ub6vb")
stretch_mode = 2

[node name="CurrencyAmountLabel" type="Label" parent="Panel/CurrencyTexture"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -11.0
offset_right = 36.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "0"

[node name="InstallMenuSounds" parent="." instance=ExtResource("21_m4dgy")]

[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_exit_button_pressed"]
